# university-helper

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.web  Dockerfile.web.dockerignore  Makefile  README.md  README.zh-CN.md  docker-compose.newhost.yml  docker-compose.release.yml  docker-compose.server.yml  docker-compose.staging.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  deploy.yml  pages.yml  pr-status-labels.yml  release.yml  test.yml
.superpowers/sdd/: task-A6-report.md
backend/: .env.example  alembic.ini  desktop_entry.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_email_index.py  002_rate_limit_counters.py  t001_tenant_baseline.py
backend/api/: vision_ocr.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  chaoxing.py  course.py  metrics.py
backend/app/core/: credential_crypto.py  exceptions.py  logging_setup.py  security.py  session_store.py  tracing.py
backend/app/db/: session.py
backend/app/middleware/: rate_limiter.py  tenant_isolation.py
backend/app/schemas/: auth.py  course.py
backend/app/services/: auth_service.py
backend/app/services/course/: task_store.py
backend/app/services/course/chaoxing/: __init__.py  answer.py  answer_base.py  answer_cache.py  answer_check.py  answer_utils.py  auth_service.py  captcha.py  cipher.py  client.py  config.py  constants.py  cookies.py  course_data_service.py  course_portal_service.py  course_service.py  cxsecret_font.py  decode.py  encryption.py  exceptions.py  font_decoder.py  learning.py  learning_manager.py  live.py  live_process.py  location_search.py  media_service.py  payload_mapper.py  quiz_service.py  rate_limiter.py  session_manager.py  signin.py  video_service.py  work_legacy_service.py
backend/app/services/course/chaoxing/answer_providers/: __init__.py  adapter.py  ai.py  go.py  like.py  local_cache.py  siliconflow.py  yanxi.py
backend/app/services/course/common/: ocr.py
backend/app/services/course/zhihuishu/: __init__.py  adapter.py  answer.py  auth.py  crypto.py  learning.py
backend/app/services/notification/: __init__.py  providers.py
backend/app/storage/: base.py  factory.py  postgres.py  sqlite.py
backend/tests/: conftest.py  test_profile_local_https.py  test_profile_local_middleware.py  test_profile_local_overrides.py
backend/tests/integration/: test_auth_api.py  test_course_api.py  test_sidecar_smoke.py  test_spa_serving.py
backend/tests/performance/: test_auth_performance.py
backend/tests/unit/: test_answer_cache_and_tiku.py  test_api_runtime_guards.py  test_auth_rate_limiter.py  test_auth_service.py  test_chaoxing_course_portal_service.py  test_chaoxing_learning_cli.py  test_chaoxing_learning_notify.py  test_chaoxing_learning_persist.py  test_chaoxing_learning_retry.py  test_chaoxing_learning_thread_start.py  test_chaoxing_login.py  test_chaoxing_session_isolation.py  test_clean_deploy_guards.py  test_config.py  test_config_profile.py  test_cx_runtime_fixes.py  test_db_session.py  test_desktop_entry.py  test_desktop_runtime_guards.py  test_health_probe.py  test_notification_providers.py  test_postgres_storage.py  test_release_packaging.py  test_security.py  test_session_store.py  test_set_version.py  test_spa_resolver.py  test_sqlite_concurrency.py  test_sqlite_storage.py  test_storage_base.py  test_storage_contract.py  test_storage_factory.py  test_task_store.py  test_tenant_isolation.py  test_tiku_go_and_fallback.py  test_zhihuishu_adapter.py  test_zhihuishu_crypto.py
database/: 00-schema.sql  01-create_tenant.sql  02-bootstrap-tenant-template.sh
database/templates/: tenant_template.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  PLATFORMS.md  RELEASING.md  frontend-ux-audit.md
docs/_archive/: DEPLOY_MANUAL.md  README.md
docs/superpowers/plans/: 2026-06-26-desktop-client-v1.4.0.md
docs/superpowers/specs/: 2026-06-24-tiku-go-and-fallback-design.md  2026-06-26-desktop-client-and-release-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: robots.txt  site.webmanifest
frontend/src/: App.jsx  App.smoke.test.jsx
frontend/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/binaries/: .gitkeep  dev-stub.py
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/scripts/: make-dev-sidecar.sh
frontend/src-tauri/splash/: index.html
frontend/src-tauri/src/: lib.rs  main.rs  port.rs
frontend/src/components/: AppLayout.jsx  AuthExpiredListener.jsx  BaiduMapPickerModal.jsx  EmptyState.jsx  ErrorBoundary.jsx  Input.jsx  MultiSelect.jsx  PrivateRoute.jsx  RouteFallback.jsx  Select.jsx  StatusBadge.jsx  ThemeProvider.jsx  ThemeToggle.jsx  Toast.jsx  Toggle.jsx  index.js  themeContext.js  toastContext.js
frontend/src/pages/: ChaoxingFanya.jsx  ChaoxingSignin.jsx  ChaoxingSignin.location.test.jsx  Dashboard.jsx  Login.jsx  NotFound.jsx  Register.jsx  Zhihuishu.jsx
frontend/src/store/: authStore.js
frontend/src/types/: api.d.ts
frontend/src/utils/: api.js  api.test.js  auth.js  chaoxingCreds.js  coordTransform.js  safeUrl.js  safeUrl.test.js
frontend/tests/: setup.js
nginx/: nginx.conf  proxy_params.conf
promo/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
promo/src/: Cover.tsx  Promo.tsx  Root.tsx  SceneStack.tsx  fonts.ts  script.ts  tokens.ts
promo/src/components/: Atmosphere.tsx  (+4 more)
scripts/: build_sidecar.sh  db_backup.sh  deploy_server.ps1  deploy_server.sh  hotfix_publish.sh  migrate_tenants.py  set_version.sh  setup.sh  smoke_sidecar.sh  test.sh
scripts/_legacy/: README.md
site/: index.html  wiki.html
site/assets/: night.js  style.css  wiki.js
(+38 files in other folders)
