[project]
name = "university-helper-backend"
version = "1.2.0"
description = "Multi-tenant campus helper backend (Chaoxing + Zhihuishu)"
# Runtime is uniformly 3.11 (Docker python:3.11-slim, ruff target-version py311,
# mypy 3.11) and the code uses 3.11-only stdlib (datetime.UTC) plus 3.10 `match`.
requires-python = ">=3.11"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { file = "../LICENSE" }

# Runtime dependencies are tracked in requirements.txt for image-build parity.
# Keep this section as a minimal description; `pip-compile` / `uv pip compile`
# is the single source of truth for pinned versions.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "ruff>=0.6",
    "mypy>=1.8",
    "bandit>=1.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "alembic/versions", "api"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "C4",            # comprehensions
    "PIE",
    "RET",
    "PL",            # pylint subset
    "TID",
]
ignore = [
    "E501",     # line length handled by formatter
    "PLR0913",  # too many args — common in service signatures
    "PLR2004",  # magic value comparisons
    # --- Baseline for adopting ruff on a mature codebase (2026-06). Real
    # correctness issues (pyflakes F*, etc.) are fixed; the rules below are
    # idiomatic-for-this-project or subjective-complexity and are suppressed
    # project-wide so `ruff check` is enforceable in CI. Ratchet down later. ---
    "B008",     # `Depends()` in arg defaults is the idiomatic FastAPI pattern
    "TID252",   # relative imports are intentional within the course sub-packages
    "PLW0603",  # `global` for module-level singletons/caches is intentional
    "PLW0602",  # ditto (global declared, mutated in place)
    "PLR0911",  # too many return statements (legacy parsers/dispatchers)
    "PLR0912",  # too many branches (legacy parsers/dispatchers)
    "PLR0915",  # too many statements (legacy worker loops)
    "PLR1714",  # merge repeated `==` into `in` — subjective
    "B904",     # raise ... from — legacy except sites; revisit incrementally
    "B007",     # unused loop control variable
    "B023",     # loop-var closures — used synchronously within the same iteration
    "SIM105",   # contextlib.suppress over try/except/pass — subjective
    "SIM103",   # return condition directly — subjective
    "SIM108",   # ternary over if/else — subjective
    "SIM117",   # single combined `with` — subjective
    "SIM223",   # short-circuit on falsy — subjective
    "SIM401",   # dict.get over if/else — subjective
    "RET503",   # implicit return None — subjective
    "RET504",   # unnecessary assignment before return — subjective
    "UP038",    # isinstance(x, (A, B)) -> A | B (keep tuple form for clarity)
    "E402",     # module import not at top — intentional late imports (circular-dep)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLR0915"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/versions", "api/"]

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"

# ---------- Coverage ----------
[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
